# uranus

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: network_security_config.xml
gradle/wrapper/: gradle-wrapper.properties
uranus-android/app/: build.gradle
uranus-android/app/src/androidTest/java/run/ikaros/uranus/: ExampleInstrumentedTest.java
uranus-android/app/src/main/: AndroidManifest.xml
uranus-android/app/src/main/cpp/: AndroidLog.h  CMakeLists.txt  UranusAudio.cpp  UranusAudio.h  UranusCallJava.cpp  UranusCallJava.h  UranusFFmpeg.cpp  UranusFFmpeg.h  UranusPlayerStatus.cpp  UranusPlayerStatus.h  UranusQueue.cpp  UranusQueue.h  UranusVideo.cpp  UranusVideo.h  native-lib.cpp
uranus-android/app/src/main/cpp/include/libavutil/: ffversion.h
uranus-android/app/src/main/java/run/ikaros/uranus/: VideoTmp.java  (+7 more)
uranus-android/app/src/main/res/layout/: activity_exo_player.xml  activity_ffmpeg_info.xml  activity_main.xml  activity_uranus_player.xml
uranus-android/app/src/main/res/values/: strings.xml  themes.xml
uranus-android/app/src/main/res/values-night/: themes.xml
uranus-android/gradle/wrapper/: gradle-wrapper.properties
uranus-harmony/: build.gradle  settings.gradle
uranus-harmony/entry/: build.gradle
uranus-harmony/entry/src/main/: config.json
uranus-harmony/entry/src/main/cpp/: CMakeLists.txt  hello.cpp
(+22 files in other folders)
